--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,12 @@ jupyterlab = "^4.2.4"
 ruptures = "^1.1.9"
 deap = "^1.4.1"
 seaborn = "^0.13.2"
+concurrent-log-handler = "^0.9.25"
+colorlog = "^6.9.0"
+pywinauto = "^0.6.8"
+pyautogui = "^0.9.54"
+opencv-python = "^4.10.0.84"
+apscheduler = "^3.10.4"
 
 [build-system]
 requires = ["poetry-core"]
